[gd_scene load_steps=2 format=3 uid="uid://dy1vg1xs58whh"]

[ext_resource type="Script" uid="uid://uupbty2y3i7r" path="res://upgrade_row.gd" id="1_qp2g1"]

[node name="UpgradeRow" type="PanelContainer"]
offset_right = 263.0
offset_bottom = 100.0
script = ExtResource("1_qp2g1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="IconRect" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="DescLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="BuyButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Buy"
